# ctftimebot

./: .env  .gitignore  .travis.yml  Cargo.toml  rls.toml  rustfmt.toml
.github/: dependabot.yml
.github/actions/github-release/: README.md  action.yml  main.js
.github/workflows/: ci.yaml  cron.yaml
src/: lib.rs  main.rs  mattermost_hook_api.rs
tests/: ctfs-1.json  ctfs-2.json  ctfs.json
