[package]
authors = ["Jonas Bushart <jonas@bushart.org>"]
edition = "2018"
name = "ctftimebot"
version = "0.1.0"

[[bin]]
doc = false
name = "ctftimebot"

[dependencies]
chrono = {version = "0.4.19", features = ["serde"]}
dotenv = "0.15.0"
env_logger = "0.8.2"
envy = "0.4.2"
lazy_static = "1.4.0"
log = "0.4.13"
regex = "1.4.3"
reqwest = {version = "0.11.0", features = ["blocking", "json"]}
serde = {version = "1.0.120", features = ["derive"]}
serde_json = "1.0.61"
serde_with = "1.6.1"

[profile.release]
lto = true
panic = "abort"
