[package]
authors = ["Jonas Bushart <jonas@bushart.org>"]
edition = "2018"
name = "ctftimebot"
version = "0.1.0"

[[bin]]
doc = false
name = "ctftimebot"

[dependencies]
chrono = {version = "0.4.19", features = ["serde"]}
dotenv = "0.15.0"
env_logger = "0.8.3"
envy = "0.4.2"
lazy_static = "1.4.0"
log = "0.4.14"
regex = "1.4.5"
reqwest = {version = "0.11.2", features = ["blocking", "json"]}
serde = {version = "1.0.125", features = ["derive"]}
serde_json = "1.0.64"
serde_with = "1.7.0"

[profile.release]
lto = true
panic = "abort"
